Name: pipes-concurrency
Version: 2.0.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013, 2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Concurrency-Library/issues
Synopsis: Concurrency for the pipes ecosystem
Description: This library provides light-weight concurrency primitives for
  pipes, with the following features:
  .
  * /Simple API/: Use only five functions
  .
  * /Deadlock Safety/: Automatically avoid concurrency deadlocks
  .
  * /Flexibility/: Build many-to-many and cyclic communication topologies
  .
  * /Dynamic Graphs/: Add or remove readers and writers at any time
  .
  Import "Pipes.Concurrent" to use the library.
  .
  Read "Pipes.Concurrent.Tutorial" for a tutorial.
Category: Control, Pipes, Concurrency
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Concurrency-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base         >= 4   && < 5  ,
        pipes        >= 4.0 && < 4.2,
        stm          >= 2.4 && < 2.5
    Exposed-Modules:
        Pipes.Concurrent,
        Pipes.Concurrent.Tutorial
    GHC-Options: -O2

Test-Suite tests
    Type: exitcode-stdio-1.0
    Main-Is: tests-main.hs
    HS-Source-Dirs: tests .
    Build-Depends:
        base              >= 4     && < 5  ,
        pipes             >= 4.0.0 && < 4.2,
        pipes-concurrency >= 2.0.0 && < 2.1,
        stm               >= 2.4.3 && < 2.5,
        async             >= 2.0   && < 2.1
